# cs-ubb-eduml-app-ma

./: .copier-answers.yml  Dockerfile  MLProject  README.md  pyproject.toml
.github/workflows/: publish-image.yml
data/: cardatasettrain.csv
helm/cs-ubb-eduml-app-ma/: values.yaml
helm/edu-ubb-gpu/: Chart.yaml  values.yaml
helm/edu-ubb-gpu/templates/: _helpers.tpl  deployment.yaml
mano/: .gitignore  Dockerfile  MLProject  pyproject.toml
mano/.github/workflows/: publish-image.yml
mano/helm/cs-ubb-eduml-app-ma/: Chart.yaml
mano/helm/cs-ubb-eduml-app-ma/templates/: deployment.yaml
mano/src/cs_ubb_eduml_app_ma/: __main__.py
mano/src/cs_ubb_eduml_app_ma/config/: __init__.py  _settings.py
mano/src/cs_ubb_eduml_app_ma/mlflow/wrappers/: _base.py  _sklearn.py  _torch.py
src/cs_ubb_eduml_app_ma/: __main__.py
src/cs_ubb_eduml_app_ma/mlflow/wrappers/: __init__.py
src/edu_ubb_gpu/: __main__.py
src/edu_ubb_gpu/config/: __init__.py  _settings.py
src/edu_ubb_gpu/mlflow/wrappers/: __init__.py  _sklearn.py  _torch.py
